# BME_prog1_loim

./: CMakeLists.txt  DOCUMENTATION.md  README.md  TUTORIAL.html  TUTORIAL.md  main.c  properties.h
libs/: din_list_manager.c  din_list_manager.h  manage_stat_file.c  manage_stat_file.h  read_data.c  read_data.h  read_data_from_row_file.c  read_data_from_row_file.h  utility.c  utility.h
pages/: choose_question.c  choose_question.h  main_menu.c  main_menu.h  name_page.c  name_page.h  pause_page.c  pause_page.h  row_question_page.c  row_question_page.h  settings_menu.c  settings_menu.h  stat_page.c  stat_page.h
